--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
 
 </head>
 <script type="text/javascript">
-	(function (d, m) {
-		var kommunicateSettings =
-			{ "appId": "3296cedc1117379a137796909a3a850d7", "popupWidget": true, "automaticChatOpenOnNavigation": true };
-		var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
-		s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
-		var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
-		window.kommunicate = m; m._globals = kommunicateSettings;
-	})(document, window.kommunicate || {});
-/* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
-</script>
+    (function(d, m){
+
+    /*---------------- Kommunicate settings start ----------------*/
+
+     var kommunicateSettings = {
+      "appId": "<APP_ID>",  
+      "automaticChatOpenOnNavigation": true,
+      "popupWidget": true
+      /*
+      "onInit": function (){
+        // paste your code here
+      }
+      */
+      };
+
+    /*----------------- Kommunicate settings end ------------------*/
+
+     var s = document.createElement("script");
+      s.type = "text/javascr
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
