--- a/index.html
+++ b/index.html
@@ -5,24 +5,15 @@
 </head>
 <script type="text/javascript">
     (function(d, m){
-
-    /*---------------- Kommunicate settings start ----------------*/
-
-     var kommunicateSettings = {
-      "appId": "<APP_ID>",  
-      "automaticChatOpenOnNavigation": true,
-      "popupWidget": true
-      /*
-      "onInit": function (){
-        // paste your code here
-      }
-      */
-      };
-
-    /*----------------- Kommunicate settings end ------------------*/
-
-     var s = document.createElement("script");
-      s.type = "text/javascr
+        var kommunicateSettings = 
+            {"appId":"55c00cd83d17f836266cc44918bd60c9","popupWidget":true,"automaticChatOpenOnNavigation":true};
+        var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+        s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+        var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+        window.kommunicate = m; m._globals = kommunicateSettings;
+    })(document, window.kommunicate || {});
+/* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
+</script>
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
