--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- Basic -->
 
 </head>
-<script type="text/javascript">
+<!---<script type="text/javascript">
     (function(d, m){
         var kommunicateSettings = 
             {"appId":"120cc887f07805ce43212fde500f4d243","popupWidget":true,"automaticChatOpenOnNavigation":true};
@@ -13,7 +13,7 @@
         window.kommunicate = m; m._globals = kommunicateSettings;
     })(document, window.kommunicate || {});
 /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
-</script>
+</script>--->
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
