--- a/Melancholy/public/index.html
+++ b/Melancholy/public/index.html
@@ -12,12 +12,12 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>Melancholy</title>
+		<title>Cure It Chat Me</title>
 	</head>
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-smile"></i> Melancholy</h1>
+				<h1><i class="fas fa-smile"></i> Chat Me</h1>
 			</header>
 			<main class="join-main">
 				<form action="chat.html">
