--- a/Melancholy/public/chat.html
+++ b/Melancholy/public/chat.html
@@ -10,12 +10,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Melancholy</title>
+    <title>Cure It Chat Me</title>
   </head>
   <body>
     <div class="chat-container">
       <header class="chat-header">
-        <h1><i class="fas fa-smile"></i> Melancholy</h1>
+        <h1><i class="fas fa-smile"></i> Chat Me</h1>
         <a id="leave-btn" class="btn-chat">Leave Room</a>
       </header>
       <main class="chat-main">
