--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<ul class="navbar-nav" style="padding-left: 20px;">
 						<li><a class="nav-link active" href="#home">Home</a></li>
 						<li><a class="nav-link" href="#about">About Us</a></li>
-						<li><a class="nav-link" href="practice.html"target="_blank">Recommendation</a></li>
+						<li><a class="nav-link" href="https://forms.gle/ZRSFZ6sxG7XAE6rP9"target="_blank">Recommendation</a></li>
 						<li><a class="nav-link" href="#appointment">Apppointment</a></li>
 						<li><a class="nav-link" href="#Melancholy">Chat Me</a></li>
 						<li><a class="nav-link" href="#gallery">Gallery</a></li>
